syntax = "proto3";

package series;

import "common.proto";

import "google/protobuf/timestamp.proto";

message SearchRequest {
  optional string query = 1;
  optional string cursor = 2;
  int64 limit = 3;
}

message GetRequest {
  string series_id = 1;
}

message CreateRequest {
  string user_id = 1;
  string label = 2;
  optional string image = 3;
}

message UpdateRequest {
  string user_id = 1;
  string series_id = 2;
  optional string label = 3;
  optional string image = 4;
}

message DeleteRequest {
  string user_id = 1;
  string series_id = 2;
}

message AddArticleRequest {
  string user_id = 1;
  string series_id = 2;
  string article_id = 3;
}

message RemoveArticleRequest {
  string user_id = 1;
  string series_id = 2;
  string article_id = 3;
}

message ArticlesRequest {
  string series_id = 1; 
  int64 limit = 2;
  optional float order = 3;
  optional string by_user = 4; 
}

message ReorderArticleRequest {
  string user_id = 1;
  string series_id = 2;
  string article_id = 3;
  float order = 4;
}

service SeriesService {
  rpc Search(SearchRequest) returns (common.Serieses);
  rpc Get(GetRequest) returns (common.Series);
  rpc Articles(ArticlesRequest) returns (common.FullArticles);
  rpc Create(CreateRequest) returns (common.Series);
  rpc Update(UpdateRequest) returns (common.Series);
  rpc Delete(DeleteRequest) returns (common.MessageResponse);
  rpc AddArticle(AddArticleRequest) returns (common.MessageResponse);
  rpc RemoveArticle(RemoveArticleRequest) returns (common.MessageResponse);
  rpc ReorderArticle(ReorderArticleRequest) returns (common.MessageResponse);
}
